SF Primes/src/objects/WIP_Order__c.object
<CustomObject>
    <description>Display WIP Orders from Oracle</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WIP Orders</relationshipLabel>
        <relationshipName>WIP_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activation_OM_Contract_Admin__c</fullName>
        <description>Name of Activation Order Manager or Contract Admin</description>
        <label>Activation OM/Contract Admin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aged_Days__c</fullName>
        <description>Number of days from booked date</description>
        <inlineHelpText>Number of days from booked date</inlineHelpText>
        <label>Aged Days</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account_Name__c</fullName>
        <description>Bill To Account Name</description>
        <inlineHelpText>Bill To Account Name</inlineHelpText>
        <label>Bill To Account Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account_Number__c</fullName>
        <description>Bill To Account Number</description>
        <label>Bill To Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Location__c</fullName>
        <description>Order Billing Address</description>
        <inlineHelpText>Order Billing Address</inlineHelpText>
        <label>Bill To Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Override_Date__c</fullName>
        <description>Effective Billing date</description>
        <inlineHelpText>Effective Billing date</inlineHelpText>
        <label>Billing Override Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <description>Date when order was booked</description>
        <inlineHelpText>Date when order was booked</inlineHelpText>
        <label>Booked Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_OM__c</fullName>
        <description>Name of Booking Order Manager</description>
        <label>Booking OM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_QA__c</fullName>
        <description>Name of Builder QA</description>
        <label>Build QA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <description>Name of Builder</description>
        <label>Builder</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>The scheduled date for the order to process and take down the website or product</description>
        <inlineHelpText>The scheduled date for the order to process and take down the website or product</inlineHelpText>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Enrollment_OM__c</fullName>
        <description>Name of Enrollment Order Manager</description>
        <label>Enrollment OM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Reason_Code__c</fullName>
        <description>Hold Reason Code</description>
        <inlineHelpText>Hold Reason Code</inlineHelpText>
        <label>Hold Reason Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <description>Indicates if order is on hold: YES OR NO</description>
        <inlineHelpText>Indicates if order is on hold: YES OR NO</inlineHelpText>
        <label>On Hold</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Category__c</fullName>
        <label>Order Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Detail_Notes__c</fullName>
        <description>Contains product codes, line quantity and line amount</description>
        <inlineHelpText>Contains product codes, line quantity and line amount</inlineHelpText>
        <label>Order Detail Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Order Number generated from Oracle</description>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Priority__c</fullName>
        <description>Order Priority</description>
        <label>Order Priority</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>Status of Order</description>
        <label>Order Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Submitter__c</fullName>
        <description>Name of Order Submitter</description>
        <inlineHelpText>Name of Order Submitter</inlineHelpText>
        <label>Order Submitter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Order Type</description>
        <label>Order Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_item_Description__c</fullName>
        <description>Description of all Parent line items except for setup fees</description>
        <inlineHelpText>Description of all Parent line items except for setup fees</inlineHelpText>
        <label>Parent item Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recurring_Fee__c</fullName>
        <description>Amount of recurring fee</description>
        <inlineHelpText>This is the net amount of the new order and the return order.  For the new recurring amount please see the line detail.</inlineHelpText>
        <label>Recurring Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <description>Total Amount of setup fees on order</description>
        <inlineHelpText>Total Amount of setup fees on order</inlineHelpText>
        <label>Setup Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Order_Fee__c</fullName>
        <description>Sum of setup fee and recurring fee</description>
        <inlineHelpText>Sum of setup fee and recurring fee</inlineHelpText>
        <label>Total Order Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <description>WEBID Field</description>
        <inlineHelpText>WebID is not from Install Base, it is from order</inlineHelpText>
        <label>WebID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WIP Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Parent_item_Description__c</columns>
        <columns>Order_Status__c</columns>
        <columns>Booked_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WIP Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>